--- a/bib.bib
+++ b/bib.bib
@@ -269,3 +269,31 @@
   year={2016},
   publisher={Frontiers}
 }
+
+@article{freitag2016fast,
+  title={Fast domain adaptation for neural machine translation},
+  author={Freitag, Markus and Al-Onaizan, Yaser},
+  journal={arXiv preprint arXiv:1612.06897},
+  year={2016}
+}
+
+@article{gonen2019lipstick,
+  title={Lipstick on a pig: Debiasing methods cover up systematic gender biases in word embeddings but do not remove them},
+  author={Gonen, Hila and Goldberg, Yoav},
+  journal={arXiv preprint arXiv:1903.03862},
+  year={2019}
+}
+
+@article{prost2019debiasing,
+  title={Debiasing embeddings for reduced gender bias in text classification},
+  author={Prost, Flavien and Thain, Nithum and Bolukbasi, Tolga},
+  journal={arXiv preprint arXiv:1908.02810},
+  year={2019}
+}
+
+@article{zhao2018learning,
+  title={Learning gender-neutral word embeddings},
+  author={Zhao, Jieyu and Zhou, Yichao and Li, Zeyu and Wang, Wei and Chang, Kai-Wei},
+  journal={arXiv preprint arXiv:1809.01496},
+  year={2018}
+}
